--- a/CVS_Review/app/build.gradle
+++ b/CVS_Review/app/build.gradle
@@ -33,9 +33,16 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0' //파이어베이스 앱 분석
+    implementation 'com.google.firebase:firebase-core:17.2.1'//파이어베이스 코어
+    implementation 'com.google.firebase:firebase-auth:19.1.0' //파이어베이스 인증
+    implementation 'com.firebaseui:firebase-ui-auth:4.2.1' //파이어베이스 인증2
+    implementation 'com.github.bumptech.glide:glide:4.9.0' //글라이드 이미지 로딩 구글 프로필 사진등 이미지 관련
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0' //글라이드 이미지 로딩2
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
