프로필 정보 띄우기 기능 추가

--- a/CVS_Review/app/src/main/AndroidManifest.xml
+++ b/CVS_Review/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         <activity android:name=".BarcodeActivity"></activity>
         <activity android:name=".SettingActivity" />
         <activity android:name=".ResultActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
