Gradle Build 버전 4.1.3 rollback

--- a/CVS_Review/gradle/wrapper/gradle-wrapper.properties
+++ b/CVS_Review/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Apr 15 13:29:37 KST 2021
+#Sun May 02 17:50:04 KST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https://services.gradle.org/distributions/gradle-6.7.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
