--- a/CVS_Review/app/build.gradle
+++ b/CVS_Review/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'gun0912.ted:tedpermission:2.2.3'
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.2.0'
