카카오 로그인 부분

--- a/CVS_Review/app/src/main/AndroidManifest.xml
+++ b/CVS_Review/app/src/main/AndroidManifest.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.barcode.cvs_review">
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.hardware.camera2.autofocus"/>
-    <uses-feature android:name="android.hardware.camera2"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.hardware.camera2.autofocus" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.camera2" />
+
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CVS_Review">
-        <activity android:name=".BarcodeScanActivity"/>
-        <activity android:name=".ProductSpecActivity"/>
+        <activity android:name=".SubActivity"></activity>
+        <activity android:name=".BarcodeScanActivity" />
+        <activity android:name=".ProductSpecActivity" />
         <activity android:name=".SettingActivity" />
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
+
+        <meta-data
+            android:name="com.kakao.sdk.Appkey"
+            android:value="944bdddb22bd609d2ed0fb193d509f06" />
     </application>
 
 </manifest>
