--- a/CVS_Review/build.gradle
+++ b/CVS_Review/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -13,9 +14,16 @@ buildscript {
 }
 
 allprojects {
-    repositories {
+    repositories {//implementation을 가능하게 해줌
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public'}
+        gradle.projectsEvaluated {
+            tasks.withType(JavaCompile) {
+                options.compilerArgs << "-Xlint:deprecation"
+            }
+        }
     }
 }
 
