--- a/CVS_Review/app/build.gradle
+++ b/CVS_Review/app/build.gradle
@@ -45,13 +45,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'//글라이드 이미지 로딩 구글 프로필 사진등 이미지 관련
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' //글라이드 이미지 로딩2
-    implementation 'com.facebook.android:facebook-share:[8,9)'//facebook
-    implementation 'com.facebook.android:facebook-messenger:[8,9)'//facebook
-    implementation 'com.facebook.android:facebook-applinks:[8,9)'//facebook
-    implementation 'com.facebook.android:facebook-core:[8,9)'//facebook
-    implementation 'com.facebook.android:facebook-login:[8,9)'//facebook sdk version
-    implementation 'com.kakao.sdk:usermgmt:1.30.6' //카카오톡 sdk
-
+    implementation 'com.kakao.sdk:usermgmt:1.27.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
