--- a/CVS_Review/app/src/main/AndroidManifest.xml
+++ b/CVS_Review/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CVS_Review">
+        android:theme="@style/Theme.CVS_Review"
+        android:usesCleartextTraffic="true">
         <activity android:name=".SubActivity"></activity>
         <activity android:name=".BarcodeScanActivity" />
         <activity android:name=".ProductSpecActivity" />
@@ -31,9 +31,8 @@
         </activity>
         <activity android:name=".MainActivity" />
 
-
         <meta-data
-            android:name="com.kakao.sdk.Appkey"
+            android:name="com.kakao.sdk.AppKey"
             android:value="944bdddb22bd609d2ed0fb193d509f06" />
     </application>
 
