--- a/CVS_Review/app/build.gradle
+++ b/CVS_Review/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.kakao.sdk:usermgmt:1.27.0'
+    implementation "com.kakao.sdk:v2-user:2.5.0"
     implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
@@ -41,7 +43,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'//글라이드 이미지 로딩 구글 프로필 사진등 이미지 관련
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' //글라이드 이미지 로딩2
-    implementation 'com.kakao.sdk:usermgmt:1.27.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
