설정화면 구성
마이페이지 : 리사이클뷰를 사용하여 '내가 쓴 리뷰'를 보여줌
공지사항, 오픈소스라이선스 추가
개발자 문의 : 바로 개발자에서 전화걸수 있도록 구성

--- a/CVS_Review/app/src/main/AndroidManifest.xml
+++ b/CVS_Review/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CVS_Review"
         android:usesCleartextTraffic="true">
+        <activity android:name=".activity.Notice"></activity>
+        <activity android:name=".activity.MyPage" />
         <activity android:name=".activity.InsertReview" />
         <activity android:name=".activity.BarcodeScanActivity" />
         <activity android:name=".activity.ProductSpecActivity" />
